--- a/SourceCode/styling.css
+++ b/SourceCode/styling.css
@@ -17,7 +17,7 @@ box-sizing: border-box;
     
 display: flex;
 justify-content: center;
-justify-items: center;
+align-items: center;
 width: 100%;
 
 
@@ -44,6 +44,8 @@ padding: 2rem;
 color:white;
 text-decoration: none;
     display: flex;
+    padding: 0.5rem;
+    border-radius: 15px;
 }
 .navbar ul li a:hover{
 background-color:lightpink;
@@ -101,10 +103,10 @@ height: 70%;
 }
 .About p{
     font-family:Georgia, 'Times New Roman', Times, serif;
-margin: 2em;
+margin: 1em;
     text-align: center;
     color: teal;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 .About h1{
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -117,7 +119,7 @@ margin: 2em;
 .PrivacyPolicy h4{
     font-family:Georgia, 'Times New Roman', Times, serif;
     color:white;
-    text-align: center;
+   text-align: center;
 }
 .PrivacyPolicy p {
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -127,7 +129,7 @@ margin: 2em;
     padding: 0.5em;
 }
 .PrivacyPolicy{
-    text-align:right;
+   /* text-align:right;*/
    margin: 1.5em;
     
     padding:o.5em;
@@ -150,7 +152,6 @@ justify-content: center;
     width: 100%;
     padding:1em;
     margin: 0;
-    padding: 0;
 }
 
 .Social{
@@ -209,7 +210,8 @@ padding: 0;
 .Qualifications{
     grid-column: 1;
     color: teal;
-   padding: 2em;
+   padding: 1em;
+   
     
 }
 .Qualifications h2{
@@ -243,7 +245,7 @@ margin: 0.2em;
 color: teal;
 font-size: 1em;
 }
-.skills 
+
 /*Contact*/
 .Contact{
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -254,7 +256,7 @@ font-size: 1em;
     text-align: center;
     margin: 0;
     color: teal;
-    background-color: white;
+    background-color:whitesmoke;
     height:50vh;
 }
 .Contact h3 {
@@ -353,9 +355,170 @@ margin: 2em;
 @media screen and (max-width: 481px){
     .navbar ul {
         flex-direction: column;
+        
     }
+    p{font-size: 1em;}
+    
+    .about p{
+        font-size: 1.5em;
     }
-    .Social a{
+    .footer .PrivacyPolicy p{
+    font-size: 1em;
+    }
+    .info h3{
+        font-size: 1em;
+        margin: 0;
+    }
+    .footer img{
+        width: 20%;
+        height:20%
+        
+    }
+    
+    
+    .Projects img{
+justify-content: center;
+        margin: 0;
+        padding: 0;
+    }
+    .footer .info h3{
+        font-size: 1em;
+    }
+    .info{
+        font-size: 1em;
+    }
+    .Qualifications h2{
+        font-size: 0.5em;
+        margin: 0;
+        padding: 0;
+    }
+    .Qualifications p{
+        font-size: 0.5em;
+    }
+    .skills{
+        font-size: 0.5em;
+    }
+    .contact p{
+        font-size: 0.5rem;
+        margin:0;
+        padding: 0%;
+    }
+    .Contact ul li{
+        margin:0;
+        font-size: 1em;
+    }
+    .PrivacyPolicy{
+        font-size: 0.5em;
+        margin:0;
+        padding: 0;
+    }
+   
+}
+@media screen and (max-width: 414px){
+
+    .PrivacyPolicy h4{
+        font-family:Georgia, 'Times New Roman', Times, serif;
         color:white;
-        text-decoration: none;
+       text-align: center;
     }
+    .PrivacyPolicy p {
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        margin-top: 0%;
+        color:white;
+        font-size: 0em;
+        padding: 0em;
+    }
+    .PrivacyPolicy{
+       
+       margin: 0;
+        
+        padding:0;
+    }
+    .footer img{
+        width: 2em;
+        height: 2em;
+        margin: 0;
+        
+        
+    }
+    .footer ul li {
+        padding: 0;
+        list-style-type: none;color:white;}
+    .footer {
+        display: flex;
+    justify-content: right;
+        height: 12em;
+        background-color:rgb(54, 114, 114);
+        width: 100%;
+        padding:0;
+        margin: 0;
+    }
+    
+    /*.Social{
+        display:flex;
+        flex-direction:row;
+        margin:0;*/
+        
+    }
+    .footer h3{
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        font-size: 1;
+        color:white ;
+        text-align: center;
+        align-content: center;
+        width: 100%;
+    }
+    .info h3{
+        font-size:0.5em;
+    }
+    .info {
+        
+        display: flex;
+        flex-direction: column;
+        font-size: 1em;
+    }
+    .info ul li {
+        font-size: 0.5em;
+    }
+   
+    .fa-facebook-square {
+        size: 1em;
+        color:white;
+    }
+    .fa-linkedin {
+        font-size: 1em;
+        color: white;
+    }
+    
+    .fa-instagram-square{
+        font-size: 1em;
+        color: white;
+    }
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
