--- a/SourceCode/styling.css
+++ b/SourceCode/styling.css
@@ -160,6 +160,9 @@ justify-content: center;
     margin:0;
     
 }
+.Social a{
+    color: white;
+}
 .footer h3{
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 1.5em;
@@ -351,190 +354,92 @@ margin: 2em;
     text-align: center;
 }
 
-/*breakpoint*/
-@media screen and (max-width: 481px){
+ /*breakpoint*/
+ @media screen and (max-width: 481px){
     .navbar ul {
-        flex-direction: column;
-        
-    }
-    p{font-size: 1em;}
-    
-    .about p{
-        font-size: 1.5em;
-    }
-    .footer .PrivacyPolicy p{
-    font-size: 1em;
-    }
-    .info h3{
-        font-size: 1em;
-        margin: 0;
-    }
+        flex-direction: column;}
+
+        .footer{
+            justify-content: first baseline;
+         }
+        .container p{
+            font-size: 0.75em;
+         }
+         .About p{font-size: 0.75em;}
+   .About h1{
+       font-size: 1em;
+       padding: 0.5em;
+   }
+.qualificationandskills{
+
+   display:flex;
+   flex-direction: column;
+   }
+   .Qualifications h2{
+       font-size: 1em;
+   }
+   .Qualifications p{
+       font-size: 0.75em;
+   }
+   .skills h2{
+       font-size: 1em;
+   }
+   .skills  ul{
+       font-size: 0.75em;
+   }
+   .Services h2{
+       font-size: 1em;
+   }
+   .serviceslist{
+       display: flex;
+       flex-direction: column;
+       margin: 1em;
+       font-size: 0.5em;
+       padding: 0;
+   }
+   .Projects h3{
+       font-size: 1em;
+   }
+   .Projects img{
+       padding: 0;
+       margin: 0;
+   }
+   .Testimonials h3{
+       font-size: 1em;
+   }
+   .Testimonilas img{
+       margin: 0;
+       padding: 0;
+       width: 15%;
+       height: 15%;
+   }
+   .Contact h3{
+       font-size: 1em;
+   }
+   .Contact ul li{
+       font-size: 0.75em;
+       padding: 0;
+   }
+
+   .info h3{
+       font-size: 0.5em;
+       padding: 0;
+   }
     .footer img{
-        width: 20%;
-        height:20%
-        
+        width: 1em;
+        height:1em;
     }
-    
-    
-    .Projects img{
-justify-content: center;
+    .fab{
         margin: 0;
-        padding: 0;
-    }
-    .footer .info h3{
-        font-size: 1em;
+        padding: 0.5em;
     }
     .info{
-        font-size: 1em;
-    }
-    .Qualifications h2{
-        font-size: 0.5em;
         margin: 0;
         padding: 0;
-    }
-    .Qualifications p{
         font-size: 0.5em;
     }
-    .skills{
-        font-size: 0.5em;
-    }
-    .contact p{
-        font-size: 0.5rem;
-        margin:0;
-        padding: 0%;
-    }
-    .Contact ul li{
-        margin:0;
-        font-size: 1em;
-    }
-    .PrivacyPolicy{
-        font-size: 0.5em;
-        margin:0;
-        padding: 0;
-    }
-   
-}
-@media screen and (max-width: 414px){
-       .Services h2{
-           font-size: 1em;
-       }
-    .Services p{
-        font-size: 1em;
-    }
-    
-    .About p{
-
-        font-size:1em ;
-       }
-    
     .container p{
-           font-size: 1 em;
-           margin-top: 0;
-       }
-
-    .PrivacyPolicy h4{
-        font-family:Georgia, 'Times New Roman', Times, serif;
-        color:white;
-       text-align: center;
-    }
-    .PrivacyPolicy p {
-        font-family:Georgia, 'Times New Roman', Times, serif;
-        margin-top: 0%;
-        color:white;
-        font-size: 0em;
-        padding: 0em;
-    }
-    .PrivacyPolicy{
-       
-       margin: 0;
-        
-        padding:0;
-    }
-    .footer img{
-        width: 2em;
-        height: 2em;
-        margin: 0;
-        
-        
-    }
-    .footer ul li {
-        padding: 0;
-        list-style-type: none;color:white;}
-    .footer {
-        display: flex;
-    justify-content: right;
-        height: 12em;
-        background-color:rgb(54, 114, 114);
-        width: 100%;
-        padding:0;
-        margin: 0;
-    }
-    
-    /*.Social{
-        display:flex;
-        flex-direction:row;
-        margin:0;*/
-        
-    }
-    .footer h3{
-        font-family:Georgia, 'Times New Roman', Times, serif;
-        font-size: 1;
-        color:white ;
-        text-align: center;
-        align-content: center;
-        width: 100%;
-    }
-    .info h3{
-        font-size:0.5em;
-    }
-    .info {
-        
-        display: flex;
-        flex-direction: column;
         font-size: 1em;
+        margin: 0.5em;
     }
-    .info ul li {
-        font-size: 0.5em;
-    }
-   
-    .fa-facebook-square {
-        size: 1em;
-        color:white;
-    }
-    .fa-linkedin {
-        font-size: 1em;
-        color: white;
-    }
-    
-    .fa-instagram-square{
-        font-size: 1em;
-        color: white;
-    }
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-}
+   }
