--- a/SourceCode/styling.css
+++ b/SourceCode/styling.css
@@ -50,9 +50,12 @@ text-decoration: none;
 .navbar ul li a:hover{
 background-color:lightpink;
 color:black;
-box-shadow: 0 0 10px black;
-
-
+box-shadow: 0 0 10px black;}
+.Projects h3:hover{
+    
+    background-color:lightseagreen;
+    color:black;
+    box-shadow: 0 0 10px black;
 }
 
 .header{
@@ -95,7 +98,7 @@ margin: 20%;
 .About{
    /* margin-bottom:20%;*/
 padding: 0;
-
+border:3px solid teal;
 align-content: center;
 text-align: center;
 padding: 2em;
@@ -202,7 +205,7 @@ justify-content: center;
 
 
 .qualificationandskills{
-
+border:3px solid teal;
 display: grid;
 grid-template-columns: 1fr 1fr;
 justify-content: center;
@@ -252,6 +255,7 @@ font-size: 1em;
 
 /*Contact*/
 .Contact{
+    border: 3px solid teal;
     font-family:Georgia, 'Times New Roman', Times, serif;
     display: flex;
     flex-direction: column;
@@ -279,7 +283,9 @@ font-size: 1.5em;
 
 
 /*services*/
-
+.Services{
+    border: 3px solid teal;
+}
 .Services h2{
     font-family:Georgia, 'Times New Roman', Times, serif;
 width: 100%;
@@ -298,6 +304,8 @@ width: 100%;
     text-align: center;
     color: teal;
     margin: 0;
+    
+
 }
 .Services p{
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -320,6 +328,10 @@ margin: 0.5em;
     margin: 2em;
 
 }
+.Testimonials{
+    border:3px solid teal;
+}
+.container
 /*icons of services*/
 
 .fa-battle-net{
@@ -338,8 +350,10 @@ padding: 0;
 }
 /*Projects*/
 .Projects{
+    border: 3px solid teal;
     align-content: center;
     margin: 0;
+   
 }
 .Projects img {
     
@@ -348,11 +362,21 @@ height:30%;
 margin: 5em;
 padding: 0.5em;
 
+
 }
+
+    
+
 .Projects h3{
     font-family:Georgia, 'Times New Roman', Times, serif;
 margin: 2em;
     text-align: center;
+}
+.Projects a{
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    
 }
 
  /*breakpoint*/
